<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Books</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="hint">Enter text here</string>
    <string name="id">ID:</string>
    <string name="name">Название:</string>
    <string name="author">Автор:</string>
    <string name="lang">Язык:</string>
    <string name="price">Цена:</string>
    <string name="size">Кол-во стр:</string>
    <string name="url">URL:</string>

</resources>
